--- a/rpn/pom.xml
+++ b/rpn/pom.xml
@@ -46,6 +46,7 @@
           <configuration>
             <source>1.21</source>
             <target>1.21</target>
+            <release>1.21</release>
           </configuration>
         </plugin>
         <plugin>
